# CellFlow

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .test_durations  a.ans  new.ans  old.ans  pyproject.toml  tests.ipynb
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test-slow.yaml  test.yaml
docs/: conf.py
docs/notebooks/: 100_pbmc.ipynb  201_zebrafish_continuous.ipynb  202_zebrafish_extended.ipynb  300_satija_unseen_cell_line_cytokine.ipynb  train.ipynb  train2.ipynb
src/cellflow/: _compat.py  datasets.py
src/cellflow/data/: __init__.py  _annbatch.py  _condition.py  _data.py  _dataloader.py  _datamanager.py  _legacy.py  _torch_dataloader.py  draft_code_reservoir_sampling.py
src/cellflow/model/: __init__.py  _base.py  _cellflow.py  _cellflow_annbatch.py
src/cellflow/networks/: __init__.py  _marginal_mlp.py  _utils.py  _velocity_field.py
src/cellflow/preprocessing/: _gene_emb.py  _preprocessing.py  _wknn.py
src/cellflow/solvers/: __init__.py  _base.py  _genot.py  _otfm.py  _registry.py  utils.py
src/cellflow/training/: __init__.py  _callbacks.py  _trainer.py
src/cfp/data/: __init__.py  _cpu_dataloader.py  _data.py  _dataloader.py  _datamanager.py  _gpu_buffer.py
src/cfp/model/: _cellflow.py
src/cfp/solvers/: _genot.py  _otfm.py
src/cfp/training/: _trainer.py
src/dagloader/: README.md  __init__.py  _eval_loader.py  _io.py  _loader.py  _scheduled_sampler.py  _schema.py  _schemes.py  _split.py
src/scaleflow/data/: _anndata_location.py  _data.py  _dataloader.py
src/scaleflow/model/: _scaleflow.py
tests/: conftest.py  scheme_helpers.py  test_datasets.py
tests/dagloader/: test_coherence.py  test_eval_loader.py  test_from_paths.py  test_in_memory_chunk.py  test_leaf_codes.py  test_pickle.py  test_split.py
tests/data/: test_cfsampler.py  test_condition.py  test_condition_id_key.py  test_datamanager.py  test_old.py  test_old_get_condition_data.py  test_torch_dataloader.py
tests/model/: test_annbatch_min_cells.py  test_annbatch_ooc.py  test_annbatch_ooc_memory.py  test_annbatch_path.py  test_annbatch_prepare_parity.py  test_annbatch_save.py  test_annbatch_split.py  test_annbatch_train.py  test_annbatch_validation.py  test_cellflow.py
tests/networks/: test_aggregators.py  test_layer_registry.py
tests/preprocessing/: test_gene_emb.py  test_preprocessing.py
tests/solver/: test_auxiliary_tasks.py  test_genot_flow_target.py  test_math_equivalence.py  test_registry.py  test_registry_regression.py  test_solver.py
tests/trainer/: test_callbacks.py  test_trainer.py
