[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "cellflow-tools"
description = "Modeling complex perturbations with flow matching at single-cell resolution"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
maintainers = [
  { name = "Daniil Bobrovskiy" },
  { name = "Dominik Klein" },
  { name = "Guillaume Huguet" },
  { name = "Jonas Simon Fleck" },
  { name = "Selman Oezleyen" },
]
authors = [
  { name = "Daniil Bobrovskiy" },
  { name = "Dominik Klein" },
  { name = "Guillaume Huguet" },
  { name = "Jonas Simon Fleck" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "adjusttext",
  "anndata",
  "cloudpickle",
  "coverage",
  "dask",
  "diffrax",
  "flax",
  "orbax",
  "ott-jax==0.5",
  "pyarrow",             # required for dask.dataframe
  "scanpy",
  "scikit-learn==1.5.1",
  "scipy<1.16",          # see https://github.com/statsmodels/statsmodels/issues/9584
  "session-info",
]
optional-dependencies.dev = [
  "furo",
  "myst-nb",
  "pre-commit",
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-tippy",
  "sphinxcontrib-bibtex",
  "tox>=4",
]
optional-dependencies.docs = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  # For notebooks
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "pandas",
  "scvi-tools>=1.3.1",
  "setuptools",                      # Until pybtex >0.23.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "sphinx>=8",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinxcontrib-bibtex>=2",
  "sphinxext-opengraph",
]
optional-dependencies.embedding = [
  "requests",
  "torch",
  "transformers",
]
optional-dependencies.external = [
  "scvi-tools>=1.3.1",
]
optional-dependencies.pp = [
  "pertpy",
  "pynndescent",
  "rdkit",
]
optional-dependencies.test = [
  "cellflow-tools[embedding]",
  "cellflow-tools[external]",
  "cellflow-tools[pp]",
  "coverage[toml]>=7",
  "pytest",
  "pytest-cov>=6",
  "pytest-mock>=3.5",
  "pytest-xdist>=3",
]
urls.Documentation = "https://cellflow.readthedocs.io/"
urls.Home-page = "https://github.com/theislab/cellflow"
urls.Source = "https://github.com/theislab/cellflow"

[tool.hatch]
build.targets.wheel.packages = [ "src/cellflow" ]
version.source = "vcs"
version.fallback-version = "0.1.0"

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "B008",
  # Missing docstring in public module
  "D100",
  # Missing docstring in public package
  "D104",
  # __magic__ methods are often self-explanatory, allow missing docstrings
  "D105",
  # Missing docstring in __init__
  "D107",
  ## Disable one in each pair of mutually incompatible rules
  # We don't want a blank line before a class docstring
  "D203",
  # We want docstrings to start immediately after the opening triple quote
  "D213",
  # first line should end with a period [Bug: doesn't work with single-line docstrings]
  "D400",
  # First line should be in imperative mood; try rephrasing
  "D401",
  # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E501",
  # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E731",
  # allow I, O, l as variable names -> I is the identity matrix
  "E741",
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.xfail_strict = true
ini_options.addopts = [
  "--import-mode=importlib", # allow using test files with same name
]
ini_options.markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage]
run.branch = true
run.concurrency = [ "multiprocessing" ]
run.parallel = "true"
run.source = [ "src/" ]
report.exclude_lines = [
  "\\#.*pragma:\\s*no.?cover",
  "^\\s*raise AssertionError\\b",
  "^\\s*raise NotImplementedError\\b",
  "^\\s*return NotImplemented\\b",
  "^if __name__ == .__main__.:$",
]
report.precision = 2
report.show_missing = true
report.skip_empty = true
report.sort = "Miss"

[tool.tox]
legacy_tox_ini = """\
  [tox]\nmin_version = 4.0\nenv_list = lint-code,py{3.11,3.12,3.13}\nskip_missing_interpreters = \
  true\n\n[testenv]\nextras = test,pp,external,embedding\npass_env = PYTEST_*,CI\ncommands =\n    coverage run -m \
  pytest {tty:--color=yes} {posargs: \\\n        --cov={env_site_packages_dir}{/}cellflow \
  --cov-config={tox_root}{/}pyproject.toml \\\n        --no-cov-on-fail --cov-report=xml \
  --cov-report=term-missing:skip-covered}\n\n[testenv:lint-code]\nextras = test,pp,external,embedding\ndescription = \
  Lint the code.\ndeps = pre-commit>=3.0.0\nskip_install = true\ncommands =\n    pre-commit run --all-files \
  --show-diff-on-failure\n\n[testenv:lint-docs]\ndescription = Lint the documentation.\nextras = \
  test,pp,external,embedding\nignore_errors = true\nallowlist_externals = make\npass_env = \
  PYENCHANT_LIBRARY_PATH\nset_env = SPHINXOPTS = -W -q --keep-going\nchangedir = {tox_root}{/}docs\ncommands =\n    \
  make linkcheck {posargs}\n    # make spelling {posargs}\n\n[testenv:examples-docs]\nextras = \
  test,pp,external,embedding\nallowlist_externals = bash\ndescription = Run the notebooks.\nuse_develop = true\ndeps \
  =\n    ipykernel\n    jupytext\n    nbconvert\n    leidenalg\nchangedir = {tox_root}{/}docs\ncommands =\n    python \
  -m ipykernel install --user --name=cellflow\n    bash {tox_root}/.run_notebooks.sh \
  {tox_root}{/}docs/notebooks\n\n[testenv:clean-docs]\ndescription = Remove the documentation.\ndeps =\nskip_install = \
  true\nchangedir = {tox_root}{/}docs\nallowlist_externals = make\ncommands =\n    make \
  clean\n\n[testenv:build-docs]\ndescription = Build the documentation.\ndeps =\nextras = \
  test,pp,external,embedding\nallowlist_externals = make\nchangedir = {tox_root}{/}docs\ncommands =\n    make html \
  {posargs}\ncommands_post =\n    python -c 'import pathlib; print(\"Documentation is under:\", \
  pathlib.Path(\"{tox_root}\") / \"docs\" / \"_build\" / \"html\" / \
  \"index.html\")'\n\n[testenv:build-package]\ndescription = Build the package.\ndeps =\n    build\n    \
  twine\nallowlist_externals = rm\ncommands =\n    rm -rf {tox_root}{/}dist\n    python -m build --sdist --wheel \
  --outdir {tox_root}{/}dist{/} {posargs:}\n    python -m twine check {tox_root}{/}dist{/}*\ncommands_post =\n    \
  python -c 'import pathlib; print(f\"Package is under:\", pathlib.Path(\"{tox_root}\") / \
  \"dist\")'\n\n[testenv:format-references]\ndescription = Format references.bib.\ndeps =\nskip_install = \
  true\nallowlist_externals = biber\ncommands = biber --tool --output_file={tox_root}{/}docs{/}references.bib --nolog \
  \\\n    --output_align --output_indent=2 --output_fieldcase=lower \\\n    --output_legacy_dates \
  --output-field-replace=journaltitle:journal,thesis:phdthesis,institution:school \\\n    \
  {tox_root}{/}docs{/}references.bib\n\
  """

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
python_version = "3.11"
plugins = "numpy.typing.mypy_plugin"
ignore_errors = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
strict_optional = true
strict_equality = true
warn_return_any = false
warn_unreachable = false
check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
no_warn_no_return = true
show_error_codes = true
show_column_numbers = true
error_summary = true
ignore_missing_imports = true
disable_error_code = [ "assignment", "comparison-overlap", "no-untyped-def", "override" ]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]

[tool.rstcheck]
ignore_directives = [
  "toctree",
  "currentmodule",
  "autosummary",
  "module",
  "automodule",
  "autoclass",
  "bibliography",
  "glossary",
  "card",
  "grid",
]
ignore_roles = [
  "mod",
]

[tool.doc8]
max_line_length = 120
